--- a/index.html
+++ b/index.html
@@ -41,14 +41,15 @@
 				<span class="placeholder"/>i.change(everyday=True)<br />
 				<span class="placeholder"/><br />
 				<span class="comments">// Like a usual story,The boy want to see the girl everyday</span><br />
-				<span class="comments">// But... this should not be a usual story </span><br />
+				<span class="comments">// But... this is not a usual story </span><br />
 				<span class="comments">// S, Thank you for appearing on my world </span><br />
 				<span class="comments">// Knowing you even without seeing you is good enough </span><br />
 				<span class="comments">// just wish to see you be happiness everyday afar</span><br />
 				<span class="placeholder"/><br />
+				u.pursuit(<span class="string">"happiness"</span>))
 				<span class="comments">// "The most beautiful makeup is the reflection of kindness from a smiling face"</span><br />
 				<span class="comments">// Then, you are the most beautiful girl in the world!</span><br />
-				u.pursuit("happiness")
+				
 			</div>
 			<div id="loveHeart">
 				<canvas id="garden"></canvas>
