--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<span class="comments">// Knowing you even without seeing you is good enough </span><br />
 				<span class="comments">// just wish to see you be happiness everyday afar</span><br />
 				<span class="placeholder"/><br />
-				u.pursuit(<span class="string">"happiness"</span>))
+				u.pursuit(<span class="string">"happiness"</span>))<br />
 				<span class="comments">// "The most beautiful makeup is the reflection of kindness from a smiling face"</span><br />
 				<span class="comments">// Then, you are the most beautiful girl in the world!</span><br />
 				
