--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
 		
-	<iframe src="audio/Perfect.m4a" allow="autoplay" style="display:none" id="iframeAudio">
+	<iframe src="audio/Perfect.mp3" allow="autoplay loop" style="display:none" id="iframeAudio">
 	</iframe> 
 	<div id="mainDiv">
 
