--- a/1024.html
+++ b/1024.html
@@ -16,7 +16,7 @@
 	<body>
 		<!--iframe loop src="audio/perfect.mp3" allow="autoplay loop" style="display:none" id="iframeAudio">
 		</iframe--> 
-		<audio autoplay="autoplay"  >
+		<audio id="perfect" autoplay="autoplay"  >
 			<source src="audio/perfect.mp3" type="audio/mpeg" />	
 		</audio>
 		<!--audio id='my' src="audio/perfect.mp3"  controls="controls" autoplay="autoplay" loop="loop" preload="auto"-- >
@@ -107,14 +107,20 @@
 		</script>
 
 		<script>
-			function audioAutoPlay(id) {
-				var audio = document.getElementById(id);
-				audio.play();
-				document.addEventListener("WeixinJSBridgeReady", function () {
-					audio.play();
-				}, false);
+
+			function autoPlay() {
+				//var myAuto = document.getElementById('perfect');
+				//myAuto.play();
+				var music = document.getElementById("perfect");
+				if (music.paused) { //判读是否播放  
+					  music.paused=false;
+					  music.play(); 
+				 }  else{
+					 music.play();
+				}
 			}
-			audioAutoPlay('my');
+			setTimeout(autoPlay, 5000)
+			//autoPlay();
 		</script>
 	</body>
 </html>
