--- a/1024.html
+++ b/1024.html
@@ -10,6 +10,7 @@
 				margin: 0;
 				overflow: hidden;
 			}
+			html, body { height: 100%; width: 100%; } 
 		</style>
 	</head>
  
@@ -25,7 +26,7 @@
 			
 		</audio-->
 		
-		<canvas width=400 height=400 style="background:#000000;" id="canvas"></canvas>
+		<canvas  style="background:#000000;" id="canvas"></canvas>
  
 		<!--
 			javascript
