--- a/1024.html
+++ b/1024.html
@@ -26,7 +26,7 @@
 			
 		</audio-->
 		
-		<canvas  style="background:#000000;" id="canvas"></canvas>
+		<canvas  style="background:#000000;height: 100%; width: 100%;" id="canvas" ></canvas>
  
 		<!--
 			javascript
