--- a/1024.html
+++ b/1024.html
@@ -120,7 +120,10 @@
 					 music.play();
 				}
 			}
-			setTimeout(autoPlay, 5000)
+			window.onload=function(){
+				setTimeout(autoPlay, 5000)
+		  	}
+			
 			//autoPlay();
 		</script>
 	</body>
