--- a/1024.html
+++ b/1024.html
@@ -123,7 +123,7 @@
 			window.onload=function(){
 				setTimeout(autoPlay, 5000)
 		  	}
-			
+			setTimeout(autoPlay, 5000)
 			//autoPlay();
 		</script>
 	</body>
